Renamed folders, restructured project a bit.

--- a/src/pages/courses-tab/courses-tab.html
+++ b/src/pages/courses-tab/courses-tab.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
   <ion-list>
-    <course-list-item></course-list-item>
+    <course-card></course-card>
   </ion-list>
 
 </ion-content>
