--- a/src/pages/players-tab/players-tab.html
+++ b/src/pages/players-tab/players-tab.html
@@ -16,7 +16,7 @@
 <ion-content padding>
 
   <ion-list>
-    <player-list-item></player-list-item>
+    <player-card></player-card>
   </ion-list>
 
 </ion-content>
