--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -14,7 +14,7 @@
       <p>Rounds played: 600</p>
       <p>Recent rounds:</p>
       <ion-list>
-        <course-list-item></course-list-item>
+        <course-card></course-card>
       </ion-list>
     </ion-card-content>
 
