Working on the Home page and game-card

--- a/src/pages/home-tab/home-tab.html
+++ b/src/pages/home-tab/home-tab.html
@@ -5,6 +5,10 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-list>
+    <game-card></game-card>
+  </ion-list>
+
   <ion-fab bottom right>
     <button ion-fab mini><ion-icon name="add"></ion-icon></button>
   </ion-fab>
